--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 </head>
 <body>
-    <nav class='cf'>
-        <ul class='cf'>
+    <nav class='menu'>
+        <ul class='menu'>
             <li>
-                <a href='#'>Item 0</a>
+                <a href='#'>Home</a>
             </li>
             <li>
-                <a href='#'>Item 1</a>
+                <a href='#'>About</a>
             </li>
             <li>
-                <a href='#'>Item 2</a>
+                <a href='#'>Blog</a>
             </li>
             <li>
-                <a href='#'>Item 3</a>
+                <a href='#'>Contact</a>
             </li>
         </ul>
         <a href='#' id='open'>MENU</a>
     </nav>
-    <h1>Basic Responsive Menu</h1>
-    <p>Playing around and learning HAML + SCSS - Basic Responsive Menu</p>
+    <div class="dotted">
+        <h1>Minimal Responsive Menu</h1>
+        <p>Use as a 'head start' template.</p>
+    </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <footer>Copyright © 2014 <a href="https://github.com/ldimitrov" target="_blank">ldimitrov</a>.</footer>
+    <footer>
+        <div class="stripped">Copyright © 2014 <a href="https://github.com/ldimitrov" target="_blank">ldimitrov</a>.</div>
+    </footer>
 </body>
 </html>
